--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "source": "./index.html",
+  "scripts": {
+    "dev": "parcel",
+    "build": "parcel build"
+  },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha1"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3"
   }
 }
