--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "parcel build"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1"
+    "bootstrap": "^5.3.0-alpha1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3"
